{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 67,
  "lineage": "d438b7aa-fb34-ade2-ca86-ed68c236595c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "class",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "class_master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:874657439262:instance/i-0310d2b4908eb151f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0310d2b4908eb151f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "classkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0739b491d33c35dd2",
            "private_dns": "ip-10-10-0-129.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.129",
            "public_dns": "ec2-3-252-93-210.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.252.93.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051ff33bc90d4bd7d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c0a105286d272ef",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01252c54f7a0f2b2a"
            ]
          },
          "dependencies": [
            "aws_key_pair.class_auth",
            "aws_security_group.class_sg",
            "aws_subnet.class_public_subnet",
            "aws_vpc.class_vpc",
            "data.aws_ami.class_ami"
          ]
        },
        {
          "index_key": "class_worker1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:874657439262:instance/i-03735e37bff790bc1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03735e37bff790bc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "classkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0781b7f0209af8d49",
            "private_dns": "ip-10-10-0-13.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.13",
            "public_dns": "ec2-3-253-67-252.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.253.67.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068766ded0f21f46e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c0a105286d272ef",
            "tags": {
              "Name": "worker1"
            },
            "tags_all": {
              "Name": "worker1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01252c54f7a0f2b2a"
            ]
          },
          "dependencies": [
            "aws_key_pair.class_auth",
            "aws_security_group.class_sg",
            "aws_subnet.class_public_subnet",
            "aws_vpc.class_vpc",
            "data.aws_ami.class_ami"
          ]
        },
        {
          "index_key": "class_worker2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:874657439262:instance/i-085a8c751f01104ed",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085a8c751f01104ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "classkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0436b22fd721ad681",
            "private_dns": "ip-10-10-0-215.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.215",
            "public_dns": "ec2-52-208-187-232.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.187.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0336854752eeafa14",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c0a105286d272ef",
            "tags": {
              "Name": "worker2"
            },
            "tags_all": {
              "Name": "worker2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01252c54f7a0f2b2a"
            ]
          },
          "dependencies": [
            "aws_key_pair.class_auth",
            "aws_security_group.class_sg",
            "aws_subnet.class_public_subnet",
            "aws_vpc.class_vpc",
            "data.aws_ami.class_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "class_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874657439262:internet-gateway/igw-068f193fd7d0d2679",
            "id": "igw-068f193fd7d0d2679",
            "owner_id": "874657439262",
            "tags": {
              "Name": "Class_gateway"
            },
            "tags_all": {
              "Name": "Class_gateway"
            },
            "vpc_id": "vpc-0b824541aea98b502"
          },
          "dependencies": [
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "class_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-068f193fd7d0d2679",
            "id": "r-rtb-0fd2dca5134f46bb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd2dca5134f46bb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.class_gateway",
            "aws_route_table.class_rtb",
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "class_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874657439262:route-table/rtb-0fd2dca5134f46bb9",
            "id": "rtb-0fd2dca5134f46bb9",
            "owner_id": "874657439262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068f193fd7d0d2679",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Class_pb_rtb"
            },
            "tags_all": {
              "Name": "Class_pb_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b824541aea98b502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "class_public_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fab61fb0be29347",
            "route_table_id": "rtb-0fd2dca5134f46bb9",
            "subnet_id": "subnet-03c0a105286d272ef"
          },
          "dependencies": [
            "aws_route_table.class_rtb",
            "aws_subnet.class_public_subnet",
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "class_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874657439262:security-group/sg-01252c54f7a0f2b2a",
            "description": "Class security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01252c54f7a0f2b2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "class_sg",
            "name_prefix": "",
            "owner_id": "874657439262",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b824541aea98b502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "class_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874657439262:subnet/subnet-03c0a105286d272ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c0a105286d272ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874657439262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Class_public_subnet"
            },
            "tags_all": {
              "Name": "Class_public_subnet"
            },
            "vpc_id": "vpc-0b824541aea98b502"
          },
          "dependencies": [
            "aws_vpc.class_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "class_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874657439262:vpc/vpc-0b824541aea98b502",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06eaa374870bcc5ef",
            "default_route_table_id": "rtb-0030ffaf42b92209b",
            "default_security_group_id": "sg-067173b8c93f1b327",
            "dhcp_options_id": "dopt-0a930392ab125cf4d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b824541aea98b502",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0030ffaf42b92209b",
            "owner_id": "874657439262",
            "tags": {
              "name": "Classtest"
            },
            "tags_all": {
              "name": "Classtest"
            }
          }
        }
      ]
    }
  ]
}